css fix to make header and body of table align

--- a/bookdown-gitbook.css
+++ b/bookdown-gitbook.css
@@ -111,7 +111,7 @@ table>tbody>tr>td /*tables generated by xtable*/ {
 /*** DT ***/
 
 /* fix the issue that header is not resized when scrollX = TRUE when clicking on: 'Toggle sidebar' */
-.dataTables_scrollHeadInner {width: 100% !important;}
+/*.dataTables_scrollHeadInner {width: 100% !important;}*/
 .book .book-body .page-wrapper .page-inner section.normal table {width: 100% !important;}
 
 /* Include a scrolling bar for button collection 
